Correção das resenhas e fichamento investimento residencial

--- a/Articles/SFC/Empirical.org
+++ b/Articles/SFC/Empirical.org
@@ -331,6 +331,12 @@ fig.savefig("./figs/Durables.png", transparent = True, dpi = 300)
 
 
 
+** TODO Incluir resultados empíricos
+
+** TODO Escrever revisão empírica sobre outros países rapidamente tal como na dissertação
+
+- [ ] Ferrara et al
+
 * Empirical Motivation                                               :ignore:
 
 
