--- a/Readings/Panel.bib
+++ b/Readings/Panel.bib
@@ -205,6 +205,125 @@
   publisher    = {Wiley}
 }
 
+@Article{Goodhart_2008,
+  author       = {Goodhart, C. and Hofmann, B.},
+  title	       = {House prices, money, credit, and the macroeconomy},
+  year	       = 2008,
+  volume       = 24,
+  number       = 1,
+  month	       = {Mar},
+  pages	       = {180–205},
+  issn	       = {1460-2121},
+  doi	       = {10.1093/oxrep/grn009},
+  url	       = {http://dx.doi.org/10.1093/oxrep/grn009},
+  journal      = {Oxford Review of Economic Policy},
+  publisher    = {Oxford University Press (OUP)}
+}
+
+@Article{Hofmann_2004,
+  author       = {Hofmann, Boris},
+  title	       = {The Determinants of Bank Credit in Industrialized
+                  Countries: Do Property Prices Matter?},
+  year	       = 2004,
+  volume       = 7,
+  number       = 2,
+  month	       = {Jul},
+  pages	       = {203–234},
+  issn	       = {1468-2362},
+  doi	       = {10.1111/j.1367-0271.2004.00136.x},
+  url	       = {http://dx.doi.org/10.1111/j.1367-0271.2004.00136.x},
+  journal      = {International Finance},
+  publisher    = {Wiley}
+}
+
+@Article{Zinman_2015,
+  author       = {Zinman, Jonathan},
+  title	       = {Household Debt: Facts, Puzzles, Theories, and
+                  Policies},
+  year	       = 2015,
+  volume       = 7,
+  number       = 1,
+  month	       = {Aug},
+  pages	       = {251–276},
+  issn	       = {1941-1391},
+  doi	       = {10.1146/annurev-economics-080614-115640},
+  url	       =
+                  {http://dx.doi.org/10.1146/annurev-economics-080614-115640},
+  journal      = {Annual Review of Economics},
+  publisher    = {Annual Reviews}
+}
+
+
+
+@Article{Aroul_2020,
+  author       = {Aroul, Ramya Rajajagadeesan and Sabherwal, Sanjiv
+                  and Saydometov, Sergiy},
+  title	       = {FEAR Index , city characteristics, and housing
+                  returns},
+  year	       = {2020},
+  month	       = {Sep},
+  issn	       = {1540-6229},
+  doi	       = {10.1111/1540-6229.12335},
+  url	       = {http://dx.doi.org/10.1111/1540-6229.12335},
+  journal      = {Real Estate Economics},
+  publisher    = {Wiley}
+}
+
+@Article{Arestis_2014,
+  author       = {Arestis, Philip and González-Martínez, Ana Rosa},
+  title	       = {Residential Construction Activity in OECD Economies},
+  year	       = 2014,
+  volume       = 83,
+  number       = 4,
+  month	       = {Jun},
+  pages	       = {451–474},
+  issn	       = {1463-6786},
+  doi	       = {10.1111/manc.12072},
+  url	       = {http://dx.doi.org/10.1111/manc.12072},
+  journal      = {The Manchester School},
+  publisher    = {Wiley}
+}
+
+@Article{Kaplan_2017,
+  author       = {Kaplan, Greg and Mitman, Kurt and Violante,
+                  Giovanni},
+  title	       = {The Housing Boom and Bust: Model Meets Evidence},
+  year	       = 2017,
+  month	       = {Aug},
+  doi	       = {10.3386/w23694},
+  url	       = {http://dx.doi.org/10.3386/w23694},
+  publisher    = {National Bureau of Economic Research}
+}
+
+@Article{Case_2010,
+  author       = {Case, Karl E. and Quigley, John M.},
+  title	       = {How Housing Busts End: Home Prices, User Cost, and Rigidities During Down Cycles},
+  year	       = {2010},
+  month	       = {Apr},
+  pages	       = {459–480},
+  doi	       = {10.1002/9781444317978.ch19},
+  url	       = {http://dx.doi.org/10.1002/9781444317978.ch19},
+  isbn	       = 9781405192156,
+  journal      = {The Blackwell Companion to the Economics of Housing},
+  publisher    = {Wiley-Blackwell}
+}
+
+@Article{Green_1997,
+  author       = {Green, Richard K.},
+  title	       = {Follow the Leader: How Changes in Residential and
+                  Non-residential Investment Predict Changes in GDP},
+  year	       = 1997,
+  volume       = 25,
+  number       = 2,
+  month	       = {Jun},
+  pages	       = {253–270},
+  issn	       = {1540-6229},
+  doi	       = {10.1111/1540-6229.00714},
+  url	       = {http://dx.doi.org/10.1111/1540-6229.00714},
+  journal      = {Real Estate Economics},
+  publisher    = {Wiley}
+}
+
 @Article{Blanchard,
   author       = {Blanchard, Pierre},
   title	       = {Software Review},
@@ -215,3 +334,5 @@
   journal      = {The Econometrics of Panel Data},
   publisher    = {Springer Berlin Heidelberg}
 }
+
+
