--- a/Readings/QCA.org
+++ b/Readings/QCA.org
@@ -1709,6 +1709,37 @@
 :ECONOMIC_ALL: Yes Partial No
 :END:  
 
+** READ [#A] [[https://www.tandfonline.com/doi/pdf/10.1080/1331677X.2020.1833746][Bustos-Contell et all - A fuzzy-set qualitative comparative analysis modelto predict bank bailouts: a study of the Spanishfinancial system]]
+   :PROPERTIES:
+   :YEAR:     2020
+   :ZOTERO:   Yes
+   :TYPE:     Case
+   :STATUS:   Filed
+   :RELEVANCE: Regular
+   :IMPACT:   Low
+   :CITE:     Wait
+   :END:
+
+   #+BEGIN_SRC bibtex
+@Article{Bustos_Contell_2020,
+  author       = {Bustos-Contell, Elisabeth and Climent-Serrano,
+                  Salvador and Labatut-Serer, Gregorio},
+  title	       = {A fuzzy-set qualitative comparative analysis model
+                  to predict bank bailouts: a study of the Spanish
+                  financial system},
+  year	       = 2020,
+  month	       = {Oct},
+  pages	       = {1–17},
+  issn	       = {1848-9664},
+  doi	       = {10.1080/1331677x.2020.1833746},
+  url	       = {http://dx.doi.org/10.1080/1331677X.2020.1833746},
+  journal      = {Economic Research-Ekonomska Istraživanja},
+  publisher    = {Informa UK Limited}
+}
+
+
+   #+END_SRC
+
 ** READ [#A] [[http://dx.doi.org/10.1111/1475-6765.12142][Hinterleitner et al]]                           :Benchmark:
    :PROPERTIES:
    :ZOTERO:   Yes
